fix layout issues for report list (#2394)

--- a/ng2-components/ng2-activiti-analytics/src/components/analytics-report-list.component.scss
+++ b/ng2-components/ng2-activiti-analytics/src/components/analytics-report-list.component.scss
@@ -12,6 +12,11 @@
             top: 5px;
         }
 
+        .activiti-filters__label {
+            white-space: nowrap;
+            overflow: hidden;
+        }
+
         .mat-nav-list .mat-list-item .mat-list-item-content {
             line-height: 48px;
         }
